# gen_subtitle

./: .gitignore  README.md  app.py  build_exe.ps1  jp_subtitle.py  pyproject.toml
